# kernelized_correlation_filters_gpu

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/kernelized_correlation_filters_gpu/: bilinear_interpolation_kernel.h  cosine_convolution_kernel.h  crop_feature_space.h  deep_feature_extraction.h  discrete_fourier_transform_kernel.h  dual_net_regression.h  fast_maths_kernel.h  gaussian_correlation_kernel.h  kernelized_correlation_filters.h  kernelized_correlation_filters_node.h  spatial_feature_pyramid_kernel.h  superpixel_cluster_weights.h  tracking_target_detector.h
include/uav_target_tracking/: bilinear_interpolation_kernel.h  cosine_convolution_kernel.h  crop_feature_space.h  cuda_common.h  deep_feature_extraction.h  discrete_fourier_transform_kernel.h  fast_maths_kernel.h  gaussian_correlation_kernel.h  gslicr.h  kernelized_correlation_filters.h  loss_target_pursuit.h  object_proposal_generation.h  spatial_feature_pyramid_kernel.h  summed_area_table.h  superpixel_cluster_weights.h  threadFenceReduction_kernel.h  tracking_target_detector.h  uav_target_tracking.h
launch/: kernelized_correlation_filters_gpu.launch  uav_target_tracking.launch
models/: deploy.prototxt  deploy_vgg16.prototxt  kcf_params.yaml
samples/: sample_kernelized_correlation_filters_gpu.launch
script/: gimbal_fisheye_fov.py
src/: #kernelized_correlation_filters_node.cpp#  .#kernelized_correlation_filters_node.cpp  deep_feature_extraction.cpp  kernelized_correlation_filters.cpp  kernelized_correlation_filters_node.cpp  uav_target_tracking_node.cpp
src/cuda/: bilinear_interpolation_kernel.cu  cosine_convolution_kernel.cu  discrete_fourier_transform_kernel.cu  fast_maths_kernel.cu  gaussian_correlation_kernel.cu  spatial_feature_pyramid_kernel.cu  threadFenceReduction_kernel.cu
src/regression_network/: bounding_box.cpp  bounding_box.h  dual_net_regression.cpp  image_proc.cpp  image_proc.h
srv/: Detector.srv
